--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,12 @@
 			<version>7.14.0</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.fazecast/jSerialComm -->
+		<dependency>
+			<groupId>com.fazecast</groupId>
+			<artifactId>jSerialComm</artifactId>
+			<version>2.10.3</version>
+		</dependency>
 
 
 
